--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         crossorigin="anonymous">
     <link href="peteForm.css" rel="stylesheet" type="text/css">
 
-    <title>McGannas Rental Application</title>
+    <title>Magganas Rental Application</title>
 </head>
 
 <body>
