--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </div>
                 <div class="form-group col-md-6">
                     <label for="inputSSN">Social Security Number</label>
-                    <input type="text" class="form-control" id="inputSSN" name="entry.205586061" required>
+                    <input type="number" class="form-control" id="inputSSN" name="entry.205586061" required>
                 </div>
             </div>
             <div class="form-row">
@@ -59,11 +59,11 @@
             <div class="form-row">
                 <div class="form-group col-md-4">
                     <label for="inputPhoneWork">Work Phone Number</label>
-                    <input type="text" class="form-control" id="inputPhoneWork" name="entry.1920237767" required>
+                    <input type="number" class="form-control" id="inputPhoneWork" name="entry.1920237767" required>
                 </div>
                 <div class="form-group col-md-4">
                     <label for="inputPhoneHome">Home Phone Number</label>
-                    <input type="text" class="form-control" id="inputPhoneHome" name="entry.2143597528" required>
+                    <input type="number" class="form-control" id="inputPhoneHome" name="entry.2143597528" required>
                 </div>
                 <div class="form-group col-md-4">
                     <label for="inputDOB">Date of Birth</label>
@@ -152,7 +152,7 @@
                 </div>
                 <div class="form-group col-md-4">
                     <label for="inputZip">Zip</label>
-                    <input type="text" class="form-control" id="inputZip" name="entry.1688225278" required>
+                    <input type="number" class="form-control" id="inputZip" name="entry.1688225278" required>
                 </div>
             </div>
             <div class="form-row">
@@ -247,7 +247,7 @@
                 </div>
                 <div class="form-group col-md-4">
                     <label for="inputPreviousZip">Zip</label>
-                    <input type="text" class="form-control" id="inputPreviousZip" name="entry.750922275">
+                    <input type="number" class="form-control" id="inputPreviousZip" name="entry.750922275">
                 </div>
             </div>
             <div class="form-row">
@@ -394,7 +394,7 @@
                 </div>
                 <div class="form-group col-md-4">
                     <label for="inputEmployerZip">Zip</label>
-                    <input type="text" class="form-control" id="inputEmployerZip" name="entry.1822244077" required>
+                    <input type="number" class="form-control" id="inputEmployerZip" name="entry.1822244077" required>
                 </div>
             </div>
             <div class="form-row">
@@ -489,12 +489,12 @@
                 </div>
                 <div class="form-group col-md-4">
                     <label for="inputPriorEmployerZip">Zip</label>
-                    <input type="text" class="form-control" id="inputPriorEmployerZip" name="entry.1084470555">
+                    <input type="number" class="form-control" id="inputPriorEmployerZip" name="entry.1084470555">
                 </div>
             </div>
             <div class="form-group">
                 <label for="inputIncome">Current Gross Income (per MONTH)</label>
-                <input type="text" class="form-control" id="inputIncome" name="entry.1832524558" required>
+                <input type="number" class="form-control" id="inputIncome" name="entry.1832524558" required>
             </div>
             <div class="form-row">
                 <div class="form-group col-md-6">
@@ -509,11 +509,11 @@
             <div class="form-row">
                 <div class="form-group col-md-6">
                     <label for="inputChecking">Checking Account Number</label>
-                    <input type="text" class="form-control" id="inputChecking" name="entry.1003515278" required>
+                    <input type="number" class="form-control" id="inputChecking" name="entry.1003515278" required>
                 </div>
                 <div class="form-group col-md-6">
                     <label for="inputSavings">Savings Account Number</label>
-                    <input type="text" class="form-control" id="inputSavings" name="entry.1757177602" required>
+                    <input type="number" class="form-control" id="inputSavings" name="entry.1757177602" required>
                 </div>
             </div>
             <div class="form-row">
@@ -529,11 +529,11 @@
             <div class="form-row">
                 <div class="form-group col-md-6">
                     <label for="inputSecondChecking">Checking Account Number</label>
-                    <input type="text" class="form-control" id="inputSecondChecking" name="entry.1400617429">
+                    <input type="number" class="form-control" id="inputSecondChecking" name="entry.1400617429">
                 </div>
                 <div class="form-group col-md-6">
                     <label for="inputSecondSavings">Savings Account Number</label>
-                    <input type="text" class="form-control" id="inputSecondSavings" name="entry.1322689373">
+                    <input type="number" class="form-control" id="inputSecondSavings" name="entry.1322689373">
                 </div>
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
