--- a/index.html
+++ b/index.html
@@ -81,7 +81,60 @@
                 </div>
                 <div class="form-group col-md-4">
                     <label for="inputLicenseState">State</label>
-                    <input type="text" class="form-control" id="inputLicenseState" name="entry.684388825" required>
+                    <select id="inputLicenseState" class="form-control" name="entry.684388825">
+                        <option selected>Choose...</option>
+                        <option value="AL">Alabama</option>
+                        <option value="AK">Alaska</option>
+                        <option value="AZ">Arizona</option>
+                        <option value="AR">Arkansas</option>
+                        <option value="CA">California</option>
+                        <option value="CO">Colorado</option>
+                        <option value="CT">Connecticut</option>
+                        <option value="DE">Delaware</option>
+                        <option value="DC">District Of Columbia</option>
+                        <option value="FL">Florida</option>
+                        <option value="GA">Georgia</option>
+                        <option value="HI">Hawaii</option>
+                        <option value="ID">Idaho</option>
+                        <option value="IL">Illinois</option>
+                        <option value="IN">Indiana</option>
+                        <option value="IA">Iowa</option>
+                        <option value="KS">Kansas</option>
+                        <option value="KY">Kentucky</option>
+                        <option value="LA">Louisiana</option>
+                        <option value="ME">Maine</option>
+                        <option value="MD">Maryland</option>
+                        <option value="MA">Massachusetts</option>
+                        <option value="MI">Michigan</option>
+                        <option value="MN">Minnesota</option>
+                        <option value="MS">Mississippi</option>
+                        <option value="MO">Missouri</option>
+                        <option value="MT">Montana</option>
+                        <option value="NE">Nebraska</option>
+                        <option value="NV">Nevada</option>
+                        <option value="NH">New Hampshire</option>
+                        <option value="NJ">New Jersey</option>
+                        <option value="NM">New Mexico</option>
+                        <option value="NY">New York</option>
+                        <option value="NC">North Carolina</option>
+                        <option value="ND">North Dakota</option>
+                        <option value="OH">Ohio</option>
+                        <option value="OK">Oklahoma</option>
+                        <option value="OR">Oregon</option>
+                        <option value="PA">Pennsylvania</option>
+                        <option value="RI">Rhode Island</option>
+                        <option value="SC">South Carolina</option>
+                        <option value="SD">South Dakota</option>
+                        <option value="TN">Tennessee</option>
+                        <option value="TX">Texas</option>
+                        <option value="UT">Utah</option>
+                        <option value="VT">Vermont</option>
+                        <option value="VA">Virginia</option>
+                        <option value="WA">Washington</option>
+                        <option value="WV">West Virginia</option>
+                        <option value="WI">Wisconsin</option>
+                        <option value="WY">Wyoming</option>
+                    </select>
                 </div>
             </div>
             <div class="form-group">
@@ -190,7 +243,7 @@
                 </div>
                 <div class="form-group col-md-4">
                     <label for="inputPreviousState">State</label>
-                    <select id="inputState" class="form-control" id="inputPreviousState" name="entry.605402211">
+                    <select id="inputPreviousState" class="form-control" name="entry.605402211">
                         <option selected>Choose...</option>
                         <option value="AL">Alabama</option>
                         <option value="AK">Alaska</option>
@@ -337,7 +390,7 @@
                 </div>
                 <div class="form-group col-md-4">
                     <label for="inputEmployerState">State</label>
-                    <select id="inputEmployerState" class="form-control" id="inputState" name="entry.609549968" required>
+                    <select id="inputEmployerState" class="form-control" name="entry.609549968" required>
                         <option selected>Choose...</option>
                         <option value="AL">Alabama</option>
                         <option value="AK">Alaska</option>
@@ -431,8 +484,8 @@
                     <input type="text" class="form-control" id="inputPriorEmployerCity" name="entry.2119424022">
                 </div>
                 <div class="form-group col-md-4">
-                    <label for="inputEmployerState">State</label>
-                    <select id="inputEmployerState" class="form-control" id="inputState" name="entry.1721297255">
+                    <label for="inputPriorEmployerState">State</label>
+                    <select id="inputPriorEmployerState" class="form-control" name="entry.1721297255">
                         <option selected>Choose...</option>
                         <option value="AL">Alabama</option>
                         <option value="AK">Alaska</option>
