--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
             target="hidden_iframe" onsubmit="submitted=true;">
             <div class="form-group">
                 <label for="inputPropertyAddress">Property Address For Which You Are Applying (Plus unit number if you know)</label>
-                <textarea class="form-control" id="inputPropertyAddress" name="entry.140979674" required></textarea>
+                <textarea class="form-control" id="inputPropertyAddress" name="entry.140979674" placeholder="e.g. 123 Main Street Apt A. SF, CA 94123"
+                    required></textarea>
             </div>
             <div class="form-row">
                 <div class="form-group col-md-6">
