--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         crossorigin="anonymous">
     <link href="peteForm.css" rel="stylesheet" type="text/css">
 
-    <title>Magganas Rental Application</title>
+    <title>Rental Application</title>
 </head>
 
 <body>
@@ -86,7 +86,7 @@
                 </div>
                 <div class="form-group col-md-4">
                     <label for="inputLicenseState">State</label>
-                    <select id="inputLicenseState" class="form-control" name="entry.684388825">
+                    <select id="inputLicenseState" class="form-control" name="entry.684388825" required>
                         <option selected>Choose...</option>
                         <option value="AL">Alabama</option>
                         <option value="AK">Alaska</option>
