--- a/index.html
+++ b/index.html
@@ -324,8 +324,8 @@
                     <input type="text" class="form-control" id="inputPreviousOwnerName" name="entry.562683872">
                 </div>
                 <div class="form-group col-md-6">
-                    <label for="inputOwnerPhone">Owner/Manager Phone Number</label>
-                    <input type="text" class="form-control" id="inputOwnerPhone" name="entry.1521514228" placeholder="(415) 555-5555">
+                    <label for="inputPreviousOwnerPhone">Owner/Manager Phone Number</label>
+                    <input type="text" class="form-control" id="inputPreviousOwnerPhone" name="entry.1521514228" placeholder="(415) 555-5555">
                 </div>
             </div>
             <div class="form-group">
