--- a/thankyou.html
+++ b/thankyou.html
@@ -10,18 +10,52 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
         crossorigin="anonymous">
 
+    <link href="peteForm.css" rel="stylesheet" type="text/css">
+
     <title>Thank You Page</title>
 </head>
 
 <body>
-    <h1>Thanks A Million!</h1>
-
-    <br />
-    <br />
-
-    <p>
-        <a href="https://kevinwoulfe.com">Back To What I was Doing!!!</a>
-    </p>
+    <div class="container thanksContainer">
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <div class="alert alert-success" role="alert">
+                    <h4 class="alert-heading">Well done!</h4>
+                    <p>Thank you for your submission. We are sending your info over now and will process it accordingly. </p>
+                    <p>
+                        To ensure a speedy application process, please complete the following...
+                    </p>
+                    <br />
+                    <hr>
+                    <ol>
+                        <li>
+                            Make sure you have made your application processing payment according to the instructions on the website.
+                        </li>
+                        <li>
+                            Email us with the following information:
+                        </li>
+                    </ol>
+                    <ul>
+                        <li>
+                            Your Name(s)
+                        </li>
+                        <li>
+                            Where you are applying
+                        </li>
+                        <li>
+                            Confirmation of Payment
+                        </li>
+                        <li>
+                            Names of anyone else applying with you
+                        </li>
+                        <li>
+                            Date you'd like to move in
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
