--- a/thankyou.html
+++ b/thankyou.html
@@ -52,6 +52,10 @@
                             Date you'd like to move in
                         </li>
                     </ul>
+                    <br />
+                    <hr>
+                    <h5 class="alert-heading">Thank you and have a great day!!</h5>
+                    <br />
                 </div>
             </div>
         </div>
