--- a/thankyou.html
+++ b/thankyou.html
@@ -40,7 +40,7 @@
                             Your Name(s)
                         </li>
                         <li>
-                            Where you are applying
+                            Address where you are applying
                         </li>
                         <li>
                             Confirmation of Payment
