most form fields

--- a/index.html
+++ b/index.html
@@ -616,6 +616,139 @@
                 </div>
             </div>
             <br />
+            <hr />
+            <br />
+            <div class="form-row">
+                <div class="form-group col-md-4">
+                    <label for="inputCreditor">Name of Creditor</label>
+                    <input type="text" class="form-control" id="inputCreditor" name="entry.14283114">
+                </div>
+                <div class="form-group col-md-4">
+                    <label for="inputCreditorPhone">Phone Number</label>
+                    <input type="text" class="form-control" id="inputCreditorPhone" name="entry.1403284695">
+                </div>
+                <div class="form-group col-md-4">
+                    <label for="inputCreditorPayment">Monthly Payment Amount</label>
+                    <input type="text" class="form-control" id="inputCreditorPayment" name="entry.231104380">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="inputCreditorAddress">Creditor Address</label>
+                <textarea class="form-control" id="inputCreditorAddress" name="entry.13484251"></textarea>
+            </div>
+            <div class="form-row">
+                <div class="form-group col-md-4">
+                    <label for="inputCreditor2">Name of Creditor</label>
+                    <input type="text" class="form-control" id="inputCreditor2" name="entry.6957857">
+                </div>
+                <div class="form-group col-md-4">
+                    <label for="inputCreditorPhone2">Phone Number</label>
+                    <input type="text" class="form-control" id="inputCreditorPhone2" name="entry.939091932">
+                </div>
+                <div class="form-group col-md-4">
+                    <label for="inputCreditorPayment2">Monthly Payment Amount</label>
+                    <input type="text" class="form-control" id="inputCreditorPayment2" name="entry.323827952">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="inputCreditorAddress2">Creditor Address</label>
+                <textarea class="form-control" id="inputCreditorAddress2" name="entry.1330788842"></textarea>
+            </div>
+            <br />
+            <hr />
+            <br />
+            <div class="form-row">
+                <div class="form-group col-md-3">
+                    <label for="inputContact">Emergency Contact</label>
+                    <input type="text" class="form-control" id="inputContact" name="entry.512884267">
+                </div>
+                <div class="form-group col-md-3">
+                    <label for="inputContactPhone">Phone Number</label>
+                    <input type="text" class="form-control" id="inputContactPhone" name="entry.163365975">
+                </div>
+                <div class="form-group col-md-3">
+                    <label for="inputContactCity">City</label>
+                    <input type="text" class="form-control" id="inputContactCity" name="entry.724542194">
+                </div>
+                <div class="form-group col-md-3">
+                    <label for="inputContactRelationship">Relationship</label>
+                    <input type="text" class="form-control" id="inputContactRelationship" name="entry.934156325">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="inputContactAddress">Address</label>
+                <textarea class="form-control" id="inputContactAddress" name="entry.735027205"></textarea>
+            </div>
+            <div class="form-row">
+                <div class="form-group col-md-3">
+                    <label for="inputContact2">Emergency Contact</label>
+                    <input type="text" class="form-control" id="inputContact2" name="entry.439043932">
+                </div>
+                <div class="form-group col-md-3">
+                    <label for="inputContactPhone2">Phone Number</label>
+                    <input type="text" class="form-control" id="inputContactPhone2" name="entry.1229496133">
+                </div>
+                <div class="form-group col-md-3">
+                    <label for="inputContactCity2">City</label>
+                    <input type="text" class="form-control" id="inputContactCity2" name="entry.1715754526">
+                </div>
+                <div class="form-group col-md-3">
+                    <label for="inputContactRelationship2">Relationship</label>
+                    <input type="text" class="form-control" id="inputContactRelationship2" name="entry.1728949949">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="inputContactAddress2">Address</label>
+                <textarea class="form-control" id="inputContactAddress2" name="entry.2067752729"></textarea>
+            </div>
+            <br />
+            <hr />
+            <br />
+            <div class="form-row">
+                <div class="form-group col-md-3">
+                    <label for="inputRef">Personal Reference</label>
+                    <input type="text" class="form-control" id="inputRef" name="entry.1465128513">
+                </div>
+                <div class="form-group col-md-3">
+                    <label for="inputRefPhone">Phone Number</label>
+                    <input type="text" class="form-control" id="inputRefPhone" name="entry.64994029">
+                </div>
+                <div class="form-group col-md-3">
+                    <label for="inputRefLength">Length of Acquaintance</label>
+                    <input type="text" class="form-control" id="inputRefLength" name="entry.1821387007">
+                </div>
+                <div class="form-group col-md-3">
+                    <label for="inputRefOccupation">Occupation</label>
+                    <input type="text" class="form-control" id="inputRefOccupation" name="entry.1210667523">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="inputRefAddress">Address</label>
+                <textarea class="form-control" id="inputRefAddress" name="entry.9628943"></textarea>
+            </div>
+            <div class="form-row">
+                <div class="form-group col-md-3">
+                    <label for="inputRef2">Personal Reference</label>
+                    <input type="text" class="form-control" id="inputRef2" name="entry.355135441">
+                </div>
+                <div class="form-group col-md-3">
+                    <label for="inputRefPhone2">Phone Number</label>
+                    <input type="text" class="form-control" id="inputRefPhone2" name="entry.1731218560">
+                </div>
+                <div class="form-group col-md-3">
+                    <label for="inputRefLength2">Length of Acquaintance</label>
+                    <input type="text" class="form-control" id="inputRefLength2" name="entry.890955110">
+                </div>
+                <div class="form-group col-md-3">
+                    <label for="inputRefOccupation2">Occupation</label>
+                    <input type="text" class="form-control" id="inputRefOccupation2" name="entry.1551877621">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="inputRefAddress2">Address</label>
+                <textarea class="form-control" id="inputRefAddress2" name="entry.1897357763"></textarea>
+            </div>
+            <br />
             <div class="form-group">
                 <div class="form-check">
                     <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
