more form fields

--- a/index.html
+++ b/index.html
@@ -749,6 +749,63 @@
                 <textarea class="form-control" id="inputRefAddress2" name="entry.1897357763"></textarea>
             </div>
             <br />
+            <hr />
+            <br />
+            <div class="form-row">
+                <div class="form-group col-md-3">
+                    <label for="inputMake">Automobile Make</label>
+                    <input type="text" class="form-control" id="inputMake" name="entry.1160316541">
+                </div>
+                <div class="form-group col-md-3">
+                    <label for="inputModel">Model</label>
+                    <input type="text" class="form-control" id="inputModel" name="entry.1672866490">
+                </div>
+                <div class="form-group col-md-3">
+                    <label for="inputAutoYear">Year</label>
+                    <input type="text" class="form-control" id="inputAutoYear" name="entry.1289130429">
+                </div>
+                <div class="form-group col-md-3">
+                    <label for="inputAutoLicense">License #</label>
+                    <input type="text" class="form-control" id="inputAutoLicense" name="entry.1413987881">
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="form-group col-md-3">
+                    <label for="inputMake2">Automobile Make</label>
+                    <input type="text" class="form-control" id="inputMake2" name="entry.474585391">
+                </div>
+                <div class="form-group col-md-3">
+                    <label for="inputModel2">Model</label>
+                    <input type="text" class="form-control" id="inputModel2" name="entry.187810023">
+                </div>
+                <div class="form-group col-md-3">
+                    <label for="inputAutoYear2">Year</label>
+                    <input type="text" class="form-control" id="inputAutoYear2" name="entry.1690943660">
+                </div>
+                <div class="form-group col-md-3">
+                    <label for="inputAutoLicense2">License #</label>
+                    <input type="text" class="form-control" id="inputAutoLicense2" name="entry.438649078">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="inputOtherVehicle">Other Motor Vehicles</label>
+                <input type="text" class="form-control" id="inputOtherVehicle" name="entry.64559613">
+            </div>
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <label for="inputBankruptcy">Have you ever filed for bankruptcy?</label>
+                    <input type="text" class="form-control" id="inputBankruptcy" name="entry.985948035">
+                </div>
+                <div class="form-group col-md-6">
+                    <label for="inputEvicted">Have you ever been evicted or asked to move?</label>
+                    <input type="text" class="form-control" id="inputEvicted" name="entry.2030793219">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="inputDrugs">Have you ever been convicted for selling, distributing, or manufacturing illegal drugs?</label>
+                <input type="text" class="form-control" id="inputDrugs" name="entry.1673936434">
+            </div>
+            <br />
             <div class="form-group">
                 <div class="form-check">
                     <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
