--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <div class="form-group col-md-4">
                     <label for="inputLicenseState">State</label>
                     <select id="inputLicenseState" class="form-control" name="entry.684388825" required>
-                        <option selected>Choose...</option>
+                        <option value="">Choose...</option>
                         <option value="AL">Alabama</option>
                         <option value="AK">Alaska</option>
                         <option value="AZ">Arizona</option>
@@ -160,7 +160,7 @@
                 <div class="form-group col-md-4">
                     <label for="inputState">State</label>
                     <select id="inputState" class="form-control" id="inputState" name="entry.1815337938" required>
-                        <option selected>Choose...</option>
+                        <option value="">Choose...</option>
                         <option value="AL">Alabama</option>
                         <option value="AK">Alaska</option>
                         <option value="AZ">Arizona</option>
@@ -258,7 +258,7 @@
                 <div class="form-group col-md-4">
                     <label for="inputPreviousState">State</label>
                     <select id="inputPreviousState" class="form-control" name="entry.605402211">
-                        <option selected>Choose...</option>
+                        <option value="">Choose...</option>
                         <option value="AL">Alabama</option>
                         <option value="AK">Alaska</option>
                         <option value="AZ">Arizona</option>
@@ -411,7 +411,7 @@
                 <div class="form-group col-md-4">
                     <label for="inputEmployerState">State</label>
                     <select id="inputEmployerState" class="form-control" name="entry.609549968" required>
-                        <option selected>Choose...</option>
+                        <option value="">Choose...</option>
                         <option value="AL">Alabama</option>
                         <option value="AK">Alaska</option>
                         <option value="AZ">Arizona</option>
@@ -509,7 +509,7 @@
                 <div class="form-group col-md-4">
                     <label for="inputPriorEmployerState">State</label>
                     <select id="inputPriorEmployerState" class="form-control" name="entry.1721297255">
-                        <option selected>Choose...</option>
+                        <option value="">Choose...</option>
                         <option value="AL">Alabama</option>
                         <option value="AK">Alaska</option>
                         <option value="AZ">Arizona</option>
@@ -794,16 +794,16 @@
             <div class="form-row">
                 <div class="form-group col-md-6">
                     <label for="inputBankruptcy">Have you ever filed for bankruptcy?</label>
-                    <input type="text" class="form-control" id="inputBankruptcy" name="entry.985948035">
+                    <input type="text" class="form-control" id="inputBankruptcy" name="entry.985948035" required>
                 </div>
                 <div class="form-group col-md-6">
                     <label for="inputEvicted">Have you ever been evicted or asked to move?</label>
-                    <input type="text" class="form-control" id="inputEvicted" name="entry.2030793219">
+                    <input type="text" class="form-control" id="inputEvicted" name="entry.2030793219" required>
                 </div>
             </div>
             <div class="form-group">
                 <label for="inputDrugs">Have you ever been convicted for selling, distributing, or manufacturing illegal drugs?</label>
-                <input type="text" class="form-control" id="inputDrugs" name="entry.1673936434">
+                <input type="text" class="form-control" id="inputDrugs" name="entry.1673936434" required>
             </div>
             <br />
             <div class="form-group">
